@@ -18,6 +18,7 @@ lintian-brush (0.62) UNRELEASED; urgency=medium
     aren't too long in entries that do have long lines. Closes: #959496
   * debian-source-options-has-custom-compression-settings: Don't break
     on empty debian/source/options files.
+  * Add fixer for binary-control-field-duplicates-source.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 25 Apr 2020 03:28:37 +0000
 
